Add randomization for Metadata parameter in UTs